feat: complete authentication and role based security